force-app/main/default/objects/SpotX_Bill__c/SpotX_Bill__c.object-meta.xml
<CustomObject>
    <label>SpotX Bill</label>
    <nameField>
        <label>SpotX Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SpotX Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>