force-app/main/default/objects/SpotX_Bill__c/fields/Ad_Requests__c.field-meta.xml
<CustomField>
    <fullName>Ad_Requests__c</fullName>
    <label>Ad Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>