force-app/main/default/objects/SpotX_Bill__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <label>Channel Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>