force-app/main/default/objects/SpotX_Bill__c/fields/Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>Deal_Id__c</fullName>
    <label>Deal Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>