force-app/main/default/objects/SpotX_Bill__c/fields/Gross__c.field-meta.xml
<CustomField>
    <fullName>Gross__c</fullName>
    <label>Gross eCPM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>