force-app/main/default/objects/SpotX_Bill__c/fields/Gross_eCPM__c.field-meta.xml
<CustomField>
    <fullName>Gross_eCPM__c</fullName>
    <label>Gross eCPM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>