force-app/main/default/objects/SpotX_Bill__c/fields/Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Revenue__c</fullName>
    <label>Gross Revenue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>