force-app/main/default/objects/SpotX_Bill__c/fields/Net_eCPM__c.field-meta.xml
<CustomField>
    <fullName>Net_eCPM__c</fullName>
    <label>Net eCPM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>