force-app/main/default/objects/SpotX_Bill__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SpotX Bills</relationshipLabel>
    <relationshipName>SpotX_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>