force-app/main/default/objects/SpotX_Bill__c/fields/View_100__c.field-meta.xml
<CustomField>
    <fullName>View_100__c</fullName>
    <label>View 100%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>