force-app/main/default/objects/SpotX_Bill__c/fields/View_50__c.field-meta.xml
<CustomField>
    <fullName>View_50__c</fullName>
    <label>View 50%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>