force-app/main/default/objects/SpotX_Bill__c/fields/View_75__c.field-meta.xml
<CustomField>
    <fullName>View_75__c</fullName>
    <label>View 75%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>