force-app/main/default/objects/SpotX_Bill__c/fields/Views_25__c.field-meta.xml
<CustomField>
    <fullName>Views_25__c</fullName>
    <label>Views 25%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>